--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,4 @@
-#veryfi-container {
+/* #veryfi-container {
   height: 100vh;
   width: 100vw;
   position: relative;
@@ -13,8 +13,8 @@
 
 #preview img {
   max-height: 80vh;
-}
-
+} */
+/* 
 #veryfi-video-ref {
   position: absolute;
   top: 0;
@@ -22,7 +22,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .submit-button, .take-button {
   color: #ffffff;
@@ -43,7 +43,7 @@
 .take-button:active { background-color: #5a6268; }
 
 @media (width >= 768px) {
-  #veryfi-video-ref {
+  /* #veryfi-video-ref {
     object-fit: contain;
-  }
+  } */
 }
